--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -8,8 +8,7 @@ jobs:
       matrix: ${{ steps.generate_matrix_config.outputs.apps }}
     steps:
       - id: generate_matrix_config
-        # run: echo 'apps=["frontend", "backend"]' >> "$GITHUB_OUTPUT"
-        run: echo 'apps=["backend"]' >> "$GITHUB_OUTPUT"
+        run: echo 'apps=["frontend", "backend"]' >> "$GITHUB_OUTPUT"
       - run: echo "generate matrix config"
 
   install_dependency:
@@ -52,9 +51,9 @@ jobs:
     steps:
       - run: echo "execute type ${{ matrix.app }}"
 
-  test:
+  unit_test:
     runs-on: ubuntu-latest
-    needs: [generate_matrix_config, lint, format, type]
+    needs: [generate_matrix_config, install_dependency]
     strategy:
       fail-fast: false
       matrix:
@@ -67,9 +66,19 @@ jobs:
       #       exit 1
       #     fi
 
+  integration_test:
+    runs-on: ubuntu-latest
+    needs: [generate_matrix_config, lint, format, type, unit_test]
+    strategy:
+      fail-fast: false
+      matrix:
+        app: ${{ fromJson(needs.generate_matrix_config.outputs.matrix) }}
+    steps:
+      - run: echo "execute test ${{ matrix.app }}"
+
   build:
     runs-on: ubuntu-latest
-    needs: [generate_matrix_config, test]
+    needs: [generate_matrix_config, integration_test]
     strategy:
       fail-fast: false
       matrix:
@@ -89,7 +98,7 @@ jobs:
 
   notify:
     runs-on: ubuntu-latest
-    needs: [generate_matrix_config, install_dependency, format, lint, type, test, build, deploy]
+    needs: [generate_matrix_config, install_dependency, format, lint, type, unit_test, integration_test, build, deploy]
     if: always()
     steps:
       - run: echo "execute deploy"
