--- a/.github/actions/install_dependency/action.yml
+++ b/.github/actions/install_dependency/action.yml
@@ -4,15 +4,20 @@ inputs:
   app:  # id of input
     description: 'app description'
     required: true
+  variable:
+    required: true
+  secret:
+    required: true
 runs:
   using: "composite"
   steps:
     - name: fronend
       if: ${{ inputs.app == 'frontend' }}
-      run: echo "install frontend dependency"
       shell: bash
-      # env:
-      #   INPUT_WHO_TO_GREET: ${{ inputs.who-to-greet }}
+      env:
+        VARIABLE_FROM_GITHUB: ${{ inputs.variable }}
+        SECRET_FROM_GITHUB: ${{ inputs.secret }}
+      run: echo "$VARIABLE_FROM_GITHUB" && echo "$SECRET_FROM_GITHUB" && echo "install frontend dependency"
 
     - name: backend
       if: ${{ inputs.app == 'backend' }}
