--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -20,11 +20,6 @@ jobs:
         app: ${{ fromJson(needs.generate_matrix_config.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v4
-      # - uses: ./.github/actions/install_dependency
-      #   with:
-      #     app: ${{ matrix.app }}
-      #     variable: ${{ vars.TEST_VARIABLE }}
-      #     secret: ${{ secrets.TEST_SECRET }}
       - run: node ./.github/cli/index.js hello wayne
       - run: echo "execute install_dependency ${{ matrix.app }}"
 
@@ -48,6 +43,7 @@ jobs:
       matrix:
         app: ${{ fromJson(needs.generate_matrix_config.outputs.matrix) }}
     steps:
+      - uses: actions/checkout@v4
       - run: echo "execute lint ${{ matrix.app }}"
 
   type:
@@ -58,6 +54,7 @@ jobs:
       matrix:
         app: ${{ fromJson(needs.generate_matrix_config.outputs.matrix) }}
     steps:
+      - uses: actions/checkout@v4
       - run: echo "execute type ${{ matrix.app }}"
 
   unit_test:
@@ -68,12 +65,8 @@ jobs:
       matrix:
         app: ${{ fromJson(needs.generate_matrix_config.outputs.matrix) }}
     steps:
+      - uses: actions/checkout@v4
       - run: echo "execute test ${{ matrix.app }}"
-      # - run: |
-      #     if [[ "${{ matrix.app }}" == "frontend" ]]; then
-      #       echo "simulate ${{ matrix.app }} ci fail"
-      #       exit 1
-      #     fi
 
   integration_test:
     runs-on: ubuntu-latest
@@ -83,6 +76,7 @@ jobs:
       matrix:
         app: ${{ fromJson(needs.generate_matrix_config.outputs.matrix) }}
     steps:
+      - uses: actions/checkout@v4
       - run: echo "execute test ${{ matrix.app }}"
 
   build:
@@ -93,6 +87,7 @@ jobs:
       matrix:
         app: ${{ fromJson(needs.generate_matrix_config.outputs.matrix) }}
     steps:
+      - uses: actions/checkout@v4
       - run: echo "execute build docker ${{ matrix.app }}"
 
   deploy:
@@ -103,11 +98,12 @@ jobs:
       matrix:
         app: ${{ fromJson(needs.generate_matrix_config.outputs.matrix) }}
     steps:
+      - uses: actions/checkout@v4
       - run: echo "execute deploy ${{ matrix.app }}"
 
-  notify:
-    runs-on: ubuntu-latest
-    needs: [generate_matrix_config, install_dependency, format, lint, type, unit_test, integration_test, build, deploy]
-    if: always()
-    steps:
-      - run: echo "execute deploy"
+  # notify:
+  #   runs-on: ubuntu-latest
+  #   needs: [generate_matrix_config, install_dependency, format, lint, type, unit_test, integration_test, build, deploy]
+  #   if: always()
+  #   steps:
+  #     - run: echo "execute deploy"
