--- a/.github/cli/package.json
+++ b/.github/cli/package.json
@@ -8,5 +8,9 @@
   },
   "author": "",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "eslint": "8.57.0",
+    "prettier": "2.6.2"
+  }
 }
