--- a/.github/cli/package.json
+++ b/.github/cli/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "@eslint/js": "9.22.0",
     "eslint": "8.57.0",
+    "globals": "16.0.0",
     "prettier": "2.6.2"
   }
 }
