--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -12,29 +12,40 @@ jobs:
           echo 'matrix_config=[{"context": "ai_bu", "only_deploy": true},{"context": "jutor_job", "only_deploy": false}]' >> "$GITHUB_OUTPUT"
       - run: echo "generate matrix config"
 
-  install_dependency:
+  # install_dependency:
+  #   runs-on: ubuntu-latest
+  #   needs: [generate_matrix_config]
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       matrix_config: ${{ fromJson(needs.generate_matrix_config.outputs.matrix) }}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - run: echo "execute install_dependency ${{ matrix.matrix_config.context }}"
+  #     - run: echo "execute install_dependency ${{ matrix.matrix_config.only_deploy }}"
+
+  format:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        matrix_config: ${{ fromJson(needs.generate_matrix_config.outputs.matrix) }}
     needs: [generate_matrix_config]
+    if: matrix.matrix_config.only_deploy
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo "execute ${{ matrix.matrix_config.context }} format"
+
+  build:
+    runs-on: ubuntu-latest
+    needs: [generate_matrix_config, format]
     strategy:
       fail-fast: false
       matrix:
         matrix_config: ${{ fromJson(needs.generate_matrix_config.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v4
-      - run: echo "execute install_dependency ${{ matrix.matrix_config.context }}"
-      - run: echo "execute install_dependency ${{ matrix.matrix_config.only_deploy }}"
-
-  # format:
-  #   runs-on: ubuntu-latest
-  #   needs: [generate_matrix_config, install_dependency]
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       app: ${{ fromJson(needs.generate_matrix_config.outputs.matrix) }}
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - run: node ./.github/cli/index.js ${{ matrix.app }} format
-  #     - run: echo "execute format ${{ matrix.app }}"
+      - run: echo "execute ${{ matrix.matrix_config.context }} build"
 
   # lint:
   #   runs-on: ubuntu-latest
