--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -1,6 +1,7 @@
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
+
 jobs:
   generate_matrix_config:
     runs-on: ubuntu-latest
@@ -9,8 +10,20 @@ jobs:
     steps:
       - id: generate_matrix_config
         run: |
-          echo 'matrix_config=[{"context": "ai_bu", "only_deploy": true},{"context": "jutor_job", "only_deploy": false}]' >> "$GITHUB_OUTPUT"
+          echo 'matrix_config=[{"context": "ai_bu", "check": false, "deploy": true},{"context": "jutor_job", "check": true, "deploy": true}]' >> "$GITHUB_OUTPUT"
       - run: echo "generate matrix config"
+
+  call_dev_workflow:
+    needs: [generate_matrix_config]
+    strategy:
+      fail-fast: false
+      matrix:
+        matrix_config: ${{ fromJson(needs.generate_matrix_config.outputs.matrix) }}
+    uses: ./.github/workflows/dev_workflow.yml
+    with:
+      context: ${{ matrix.matrix_config.context }}
+      check: ${{ matrix.matrix_config.check }}
+      deploy: ${{ matrix.matrix_config.deploy }}
 
   # install_dependency:
   #   runs-on: ubuntu-latest
@@ -24,28 +37,28 @@ jobs:
   #     - run: echo "execute install_dependency ${{ matrix.matrix_config.context }}"
   #     - run: echo "execute install_dependency ${{ matrix.matrix_config.only_deploy }}"
 
-  format:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        matrix_config: ${{ fromJson(needs.generate_matrix_config.outputs.matrix) }}
-    needs: [generate_matrix_config]
-    if: matrix.matrix_config.only_deploy
-    steps:
-      - uses: actions/checkout@v4
-      - run: echo "execute ${{ matrix.matrix_config.context }} format"
+  # format:
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       matrix_config: ${{ fromJson(needs.generate_matrix_config.outputs.matrix) }}
+  #   needs: [generate_matrix_config]
+  #   if: matrix.matrix_config.only_deploy
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - run: echo "execute ${{ matrix.matrix_config.context }} format"
 
-  build:
-    runs-on: ubuntu-latest
-    needs: [generate_matrix_config, format]
-    strategy:
-      fail-fast: false
-      matrix:
-        matrix_config: ${{ fromJson(needs.generate_matrix_config.outputs.matrix) }}
-    steps:
-      - uses: actions/checkout@v4
-      - run: echo "execute ${{ matrix.matrix_config.context }} build"
+  # build:
+  #   runs-on: ubuntu-latest
+  #   needs: [generate_matrix_config, format]
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       matrix_config: ${{ fromJson(needs.generate_matrix_config.outputs.matrix) }}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - run: echo "execute ${{ matrix.matrix_config.context }} build"
 
   # lint:
   #   runs-on: ubuntu-latest
