--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -8,6 +8,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: print
+        run: |
+          echo "GITHUB_EVENT_HEAD=${{ github.event.head }}"
+          echo "GITHUB_EVENT_AFTER=${{ github.event.after }}"
+
       # - name: Set up Google Cloud Auth
       #   uses: google-github-actions/auth@v2
       #   with:
