test: checkout with PAT

--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -19,12 +19,12 @@ jobs:
 
     permissions:
       contents: write
-      actions: write
 
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.WORKFLOW_TOKEN }}
 
       - name: tag prod tag
         run: |
