temp: test delete tag

--- a/.github/workflows/when-delete-branch.yml
+++ b/.github/workflows/when-delete-branch.yml
@@ -1,22 +1,18 @@
 name: Cleanup After Merge Pull Request
 
 on:
-  delete:
-    branches:
-      - '*/*'
-      - '!main'
-    tags-ignore:
-      - '**'
+  delete
 
 jobs:
   generate_context_config:
     runs-on: ubuntu-latest
+    if: github.event.ref_type == 'branch'
     steps:
-      - name: Check if delete is for tag
-        if: github.event.ref_type == 'tag'
-        run: |
-          echo "Skipping because this is a tag deletion"
-          exit 0
+      # - name: Check if delete is for tag
+      #   if: github.event.ref_type == 'tag'
+      #   run: |
+      #     echo "Skipping because this is a tag deletion"
+      #     exit 0
 
       - uses: actions/checkout@v4
         with:
@@ -35,6 +31,7 @@ jobs:
           echo "GITHUB_EVENT_REF_TYPE=${{ github.event.ref_type }}"
 
   cleanup:
+    if: github.event.ref_type == 'branch'
     runs-on: ubuntu-latest
 
     needs: [generate_context_config]
