--- a/.github/workflows/test-dev-workflow.yml
+++ b/.github/workflows/test-dev-workflow.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        context: [app-a, app-b]
+        context: [app-a]
 
     steps:
       - uses: actions/checkout@v4
